--- a/BenBourneAutomatedTestingAssessment/pom.xml
+++ b/BenBourneAutomatedTestingAssessment/pom.xml
@@ -4,10 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ben</groupId>
-    <artifactId>TeaTesting</artifactId>
+    <groupId>com.orangehrmlive</groupId>
+    <artifactId>BenBourneAutomatedTestingAssessment</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
         <dependency>
             <groupId>info.cukes</groupId>
@@ -21,12 +28,7 @@
             <artifactId>cucumber-java</artifactId>
             <version>1.2.4</version>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
@@ -38,6 +40,4 @@
             <version>2.41.2</version>
         </dependency>
     </dependencies>
-
-
 </project>
